basic profile info in sidebar added
- user public info in left side added

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "editor.tabSize": 2,
+    "editor.formatOnSave": true,
     "path-intellisense.mappings": {
         "/": "${workspaceRoot}",
         "src": "${workspaceRoot}/src",
